@@ -1,3 +1,9 @@
+2000-09-18  Jacob "Ulysses" Berkman  <jacob@helixcode.com>
+
+	* gnome-help-browser.c (main): 
+	* window.c (load_image): 
+	* gnome-helpwin.c (gtk_html_source): updated to work with modern gtkhtml
+
 2000-09-03  Matt Wilson  <msw@redhat.com>
 
 	* misc.c: add compatibility macros for building against bzip2-1.0
